<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fondo"

    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:ems="10"
        android:hint="@string/txt_num"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.407"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="92dp"
        android:onClick="Calcular"
        android:text="@string/boton"
        app:backgroundTint="@color/teal_700"
        app:icon="?android:attr/textCheckMarkInverse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="259dp"
        android:layout_height="192dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt">

        <RadioButton
            android:id="@+id/rb_sec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb2"
            tools:layout_editor_absoluteX="59dp"
            tools:layout_editor_absoluteY="243dp" />

        <RadioButton
            android:id="@+id/rb_fibo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb1" />

        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb3" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rb4" />

    </RadioGroup>

    <TextView
        android:id="@+id/text3"
        android:layout_width="235dp"
        android:layout_height="67dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/resultado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="-7dp" />

</androidx.constraintlayout.widget.ConstraintLayout>